--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     </audio>
 
     <div class="container" id="mensagem">
-        <h1>Olá! Estás bem?</h1>
+        <h1>Olá!</h1>
         <p>Esta semana teremos uma reunião especial e lembrei-me de te convidar.</p>
         <p>Clica no botão abaixo para ver os detalhes do convite.</p>
         <div class="button-container">
